--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Deep Festa</title>
+    <title>React APP</title>
+    <!-- <title>Deep Festa</title> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
